# bg_knowledge-base

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: memory.md  settings.json
.claude/skills/: claude_prompts.md  gcp_deploy.md  notion_schema.md
.github/workflows/: ci.yml  deploy.yml
data/drive_input/: README.md
docs/: api_cost_tracking.md  architecture.md  decision_log.md  master_data_proposal_for_kubota.md  master_data_sample.md  master_data_schema.md  runbook.md  schema.md
infra/: README.md
scripts/: apply_master_db_merges.py  build_master_data.py  build_notion_schema.py  check_connections.py  check_ingest_progress.py  check_slack_progress.py  diff_accessibility.py  diff_mtg_minutes_db.py  discover_master_db_merges.py  discover_memos.py  dump_docx.py  dump_notion_page.py  filter_merge_proposals.py  generate_setup_guide_docx.py  ingest_memo_candidates.py  ingest_mtg_minutes_db.py  ingest_one.py  ingest_slack_channel.py  inspect_schema.py
src/bot/: commands.py  slack_handler.py
src/common/: auth.py  config.py  logger.py  models.py  secrets.py
src/loaders/: master_db_writer.py  notion_writer.py  schema_manager.py  upsert_helper.py
src/pipelines/: gdrive_to_kb.py  notion_to_kb.py  slack_to_kb.py
src/processors/: entity_deduplicator.py  entity_extractor.py  rewriter.py  summarizer.py  tagger.py
src/scheduler/: cron_sync.py
src/sources/: gdrive_reader.py  gmeet_reader.py  notion_reader.py  slack_reader.py
tests/: conftest.py
tests/unit/: test_config.py  test_models.py
