[project]
name = "bg-knowledge-base"
version = "0.1.0"
description = "BG社のナレッジベース構築システム（Notion + Google Drive + Slack + Claude API）"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [
    { name = "勝山" },
]

dependencies = [
    # Anthropic Claude API
    "anthropic>=0.39.0",
    # Notion
    "notion-client>=2.2.1",
    # Google Workspace (Drive / Meet)
    "google-api-python-client>=2.140.0",
    "google-auth>=2.34.0",
    "google-auth-oauthlib>=1.2.1",
    "google-auth-httplib2>=0.2.0",
    # Slack
    "slack-sdk>=3.32.0",
    # GCP
    "google-cloud-secret-manager>=2.20.2",
    "google-cloud-storage>=2.18.2",
    "google-cloud-logging>=3.11.2",
    # データモデル・設定
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    # ユーティリティ
    "python-dotenv>=1.0.1",
    "tenacity>=9.0.0",       # リトライ処理
    "structlog>=24.4.0",     # 構造化ログ
    "httpx>=0.27.2",         # HTTPクライアント
    # Slack Bot 用（Cloud Run常駐）
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "openpyxl>=3.1.5",
    "python-docx>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.9",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.11.2",
    "types-requests>=2.32.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# ============================================================
# Ruff 設定
# ============================================================
[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
# 有効化するルール群
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",   # line-too-long (フォーマッタが処理)
    "RUF001", # 全角文字 (日本語ドキュメント・文字列で使用)
    "RUF002", # 全角文字 (日本語docstringで使用)
    "RUF003", # 全角文字 (日本語コメントで使用)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.isort]
known-first-party = ["src"]

# ============================================================
# Pytest 設定
# ============================================================
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]
asyncio_mode = "auto"
markers = [
    "integration: 統合テスト（外部APIに接続）",
    "slow: 実行時間の長いテスト",
]

# ============================================================
# Mypy 設定
# ============================================================
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
